@@ -3,7 +3,7 @@ author: TfT_02
 main: com.me.tft_02.soulbound.Soulbound
 description: Soulbound items for your RPG servers!
 version: 1.1.0
-softdepend: [DiabloDrops, EpicBossRecoded]
+softdepend: [DiabloDrops, EpicBossRecoded, LoreLocks]
 commands:
    soulbound:
       description: Usage /soulbound
